--- a/week-2/css/float-styles.css
+++ b/week-2/css/float-styles.css
@@ -1,15 +1,17 @@
+/* Existing styles from week-1, edit this and add as needed for week-2 */
 html {
 	font: 12px/14px sans-serif;
 	color: #333333;
 	background-color: black;
 }
 header {
-	background-color: red;
+	background-color: #ff4040;
 	color: white;
-	padding-top: .5px;
-	padding-right: 10px;
-	padding-left: 10px;
-	padding-bottom: 5px;
+	padding: .5px 10px 10px 5px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
 }
 
 a {
@@ -27,7 +29,7 @@ a:visited {
 
 ul {
 	width: 50%;
-	margin: 8px auto 0 auto;
+	margin: 120px auto 0 auto;
 	padding-top: 5px;
 	list-style-type: none;
 }
@@ -42,6 +44,7 @@ li {
 	padding-left: 8px;
 	padding-right: 8px;
 	border-radius: 4px;
+	clear: both;
 }
 
 img {
@@ -54,5 +57,27 @@ img {
 	border: 1px solid red;
 }
 
+.side {
+	
+}
 
+footer {
+	color: white;
+	background: #468499;
+	padding: .5px 10px 10px 5px;
+	border-radius: 5px;
+}
 
+@media screen and (min-width: 400px) {
+	.side {
+		float: left;
+		width: 48%;
+		clear: none;
+		box-sizing: border-box;
+		margin: 1%;
+		padding: 1em;
+	}
+	.side.b {
+		float: right;
+	}
+}
