--- a/week-2/css/position-styles.css
+++ b/week-2/css/position-styles.css
@@ -1,12 +1,88 @@
+/* Existing styles from week-1, edit this and add as needed for week-2 */
 html {
-	margin: 0;
-	padding: 0;
+	font: 12px/14px sans-serif;
+	color: #333333;
+	background-color: black;
+}
+header {
+	background-color: #ff4040;
+	color: white;
+	padding: .5px 10px 10px 5px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
 }
 
-.side .a, .side .b {
-	position: absolute;
+a {
+	color: white;
+
 }
 
-.side .b {
+a:hover {
+	color: green;
+}
+
+a:visited {
+	color: blue;
+}
+
+ul {
+	width: 50%;
+	margin: 120px auto 0 auto;
+	padding-top: 5px;
+	list-style-type: none;
+}
+
+li {
+	margin: 10px;
+	color: white;
+	text-align: left;
+	background-color: #2C3030;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	padding-left: 8px;
+	padding-right: 8px;
+	border-radius: 4px;
+	clear: both;
+}
+
+img {
+	width: 100%;
+	height: 100%;
+	display: block;
+}
+
+.whatever {
+	border: 1px solid red;
+}
+
+.side {
 	
+}
+
+footer {
+	color: white;
+	background: #468499;
+	padding: .5px 10px 10px 5px;
+	border-radius: 5px;
+}
+
+@media screen and (min-width: 400px) {
+	.side {
+		position: absolute;
+		width: 48%;
+		box-sizing: border-box;
+		margin: 1%;
+		padding: 1em;
+		left: 0;
+		top: 0;
+	}
+	.side.b {
+		left: auto;
+		right: 0;
+	}
+	.side-wrapper {
+		position: relative;
+	}
 }
