--- a/week-2/css/float-styles.css
+++ b/week-2/css/float-styles.css
@@ -5,13 +5,12 @@ html {
 	background-color: black;
 }
 header {
-	background-color: #ff4040;
+	background-color: red;
 	color: white;
-	padding: .5px 10px 10px 5px;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
+	padding-top: .5px;
+	padding-right: 10px;
+	padding-left: 10px;
+	padding-bottom: 5px;
 }
 
 a {
@@ -29,7 +28,7 @@ a:visited {
 
 ul {
 	width: 50%;
-	margin: 120px auto 0 auto;
+	margin: 8px auto 0 auto;
 	padding-top: 5px;
 	list-style-type: none;
 }
@@ -44,7 +43,6 @@ li {
 	padding-left: 8px;
 	padding-right: 8px;
 	border-radius: 4px;
-	clear: both;
 }
 
 img {
@@ -55,29 +53,4 @@ img {
 
 .whatever {
 	border: 1px solid red;
-}
-
-.side {
-	
-}
-
-footer {
-	color: white;
-	background: #468499;
-	padding: .5px 10px 10px 5px;
-	border-radius: 5px;
-}
-
-@media screen and (min-width: 400px) {
-	.side {
-		float: left;
-		width: 48%;
-		clear: none;
-		box-sizing: border-box;
-		margin: 1%;
-		padding: 1em;
-	}
-	.side.b {
-		float: right;
-	}
 }
